@@ -14,6 +14,7 @@ from AccessControl import Unauthorized
 from AccessControl import getSecurityManager
 from Products.CMFCore.utils import getToolByName
 from Products.PageTemplates.Expressions import getEngine
+from Products.CMFPlone.PloneBaseTool import createExprContext
 
 class Variables(object):
     """Store local variables. Allow one set of variables per user id, and
@@ -29,8 +30,8 @@ class Variables(object):
             userId = getSecurityManager().getUser().getId()
             if userId not in self._storage:
                 return
-            
-            if force or self._storage[userId]['path'] != '/'.join(context.getPhysicalPath()):                
+
+            if force or self._storage[userId]['path'] != '/'.join(context.getPhysicalPath()):
                 del self._storage[userId]
 
     def get(self, context):
@@ -39,11 +40,11 @@ class Variables(object):
         with self._lock:
             userId = getSecurityManager().getUser().getId()
             return self._storage.get(userId, {}).get('vars', {})
-    
+
     def update(self, context, variables):
         with self._lock:
             userId = getSecurityManager().getUser().getId()
-            
+
             self._storage[userId] = {
                 'path': '/'.join(context.getPhysicalPath()),
                 'vars': variables,
@@ -61,12 +62,12 @@ def preserveWhitespace(v, quote=True):
     # Borrowed from Paste
     if quote:
         v = htmlQuote(v)
-    
+
     def _repl_nbsp(match):
         if len(match.group(2)) == 1:
             return '&nbsp;'
         return match.group(1) + '&nbsp;' * (len(match.group(2))-1) + ' '
-    
+
     v = v.replace('\n', '<br>\n')
     v = re.sub(r'()(  +)', _repl_nbsp, v)
     v = re.sub(r'(\n)( +)', _repl_nbsp, v)
@@ -84,16 +85,16 @@ class InteractiveResponse(BrowserView):
 
         if self.request.method != 'POST':
             raise Unauthorized()
-        
+
         line = self.request.form.get('line', '')
         if not line.strip():
             return ''
-        
+
         line = line.rstrip() + '\n'
-        
+
         portal = getToolByName(self.context, 'portal_url').getPortalObject()
         app = portal.getPhysicalRoot()
-        
+
         globs = {
             'context': self.context,
             'request': self.request,
@@ -118,46 +119,33 @@ class TALESResponse(BrowserView):
 
         if self.request.method != 'POST':
             raise Unauthorized()
-        
+
         line = self.request.form.get('line', '')
         if not line.strip():
             return ''
-        
+
         line = line.rstrip() + '\n'
-        
+
         expr = self.compileExpression(line)
         try:
             output = expr(self.createExpressionContext())
         except:
             output = "%s" % traceback.format_exc()
-        
+
         if isinstance(output, unicode):
             output = output.encode('ascii', 'xmlcharrefreplace')
         elif not isinstance(output, str):
             output = repr(output)
 
         return preserveWhitespace(output)
-    
+
+
     def createExpressionContext(self):
-        portal = getToolByName(self.context, 'portal_url').getPortalObject()
-        folder = self.context
-        if not folder.isPrincipiaFolderish:
-            folder = self.context.getParentNode()
-        
-        contextState = queryMultiAdapter((self.context, self.request), name=u"plone_context_state")
-        portalState = queryMultiAdapter((portal, self.request), name=u"plone_portal_state")
-
-        data = {
-            'context': self.context,
-            'folder': folder,
-            'request': self.request,
-            'portal': portal,
-            'context_state': contextState,
-            'portal_state': portalState,
-            'nothing': None,
-        }
-
-        return getEngine().getContext(data)
+        """Using the Plone expression context with all its variables
+        """
+        context_state = queryMultiAdapter((self.context, self.request), name=u'plone_context_state')
+        portal_state = queryMultiAdapter((self.context, self.request), name=u'plone_portal_state')
+        return createExprContext(context_state.folder(), portal_state.portal(), self.context)
 
     def compileExpression(self, text):
         return getEngine().compile(text.strip())
